Ajusta filtros, campos e validações nos Banners no Filament

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -5,6 +5,7 @@
     "Link": "Link",
     "Location": "Localização",
     "Published at": "Exibir a partir de",
+    "Star": "Destaque",
     "Target": "Abrir o link",
     "Until then": "Exibir até",
     "_blank": "Em uma nova janela",
